--- a/featured.html
+++ b/featured.html
@@ -33,7 +33,7 @@
                         <a href="#" aria-haspopup="true">About Me</a>
                         <ul class="submenu">
                             <li><a href="/bio">Biography</a></li>
-                            <li><a href="#">Resume</a></li>
+                            <li><a href="resume_jessy_2024.pdf">Resume</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -43,17 +43,17 @@
                 <ul class="social-icons">
                     <li>
                         <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
-                                <img src="linkedin.png" alt="LinkedIn" class="social-icon">
+                                <img src="icons/linkedin.png" alt="LinkedIn" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://scholar.google.com/citations?user=J-7ZqgkAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
-                                <img src="googlescholar.png" alt="Google Scholar" class="social-icon">
+                                <img src="icons/googlescholar.png" alt="Google Scholar" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://github.com/xinzhang-jessy" target="_blank" rel="noopener noreferrer">
-                                <img src="github.png" alt="GitHub" class="social-icon">
+                                <img src="icons/github.png" alt="GitHub" class="social-icon">
                             </a>
                         </li>
                     </ul>
@@ -69,9 +69,9 @@
                     <a href="#" class="project-link">
                         <figure>
                             <img src="tbn_featured work/tbn_sf.png" alt="shoulder-feeling">
-                            <figcaption class="work-title">Shoulder Feeling</figcaption>
+                            <figcaption class="work-title">Shoulder's Feeling</figcaption>
                         </figure>
-                        <p class="description">Wearable Device Design<br>Human-centered Interaction</p>
+                        <p class="description">Wearable Design<br>Interaction Design</p>
                     </a>
                 </div>
                 <div class="waterfall-item" data-project="eepo">
@@ -98,16 +98,16 @@
                             <img src="tbn_featured work/tbn_cb.png" alt="cyber box">
                             <figcaption class="work-title">Cyber Box</figcaption>
                         </figure>
-                        <p class="description">Interface Design<br>Web Interaction Design</p>
+                        <p class="description">Interaction Design<br>Visual Design</p>
                     </a>
                 </div>
                 <div class="waterfall-item" data-project="pressure-pad">
                     <a href="#" class="project-link">
                         <figure>
-                            <img src="tbn_featured work/tbn_pp.png" alt="pressure pad">
+                            <img src="tbn_featured work/tbn_pp.jpg" alt="pressure pad">
                             <figcaption class="work-title">Pressure Pad</figcaption>
                         </figure>
-                        <p class="description">Textile Pressure Sensor<br>Wearable Interaction Design<br>Human-centered Interaction</p>
+                        <p class="description">Body-centric Interaction Design<br>Textile Pressure Sensor</p>
                     </a>
                 </div>
                 
