--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                     <ul class="social-icons">
                         <li>
                             <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
-                                    <img src="icon/linkedin.png" alt="LinkedIn" class="social-icon">
+                                    <img src="icons/linkedin.png" alt="LinkedIn" class="social-icon">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://scholar.google.com/citations?user=J-7ZqgkAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
-                                    <img src="icon/googlescholar.png" alt="Google Scholar" class="social-icon">
+                                    <img src="icons/googlescholar.png" alt="Google Scholar" class="social-icon">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://github.com/xinzhang-jessy" target="_blank" rel="noopener noreferrer">
-                                    <img src="icon/github.png" alt="GitHub" class="social-icon">
+                                    <img src="icons/github.png" alt="GitHub" class="social-icon">
                                 </a>
                             </li>
                         </ul>
@@ -69,34 +69,16 @@
                             <img src="tbn_major work/tbn_ss.png" alt="seagull studio">
                             <figcaption class="work-title">Seagull Studio</figcaption>
                         </figure>
-                        <p class="description">Mobile Application Design<br>Branding<br>Product Photography</p>
-                    </a>
-                </div>
-                <div class="waterfall-item" data-project="uhn-project">
-                    <a href="#" class="project-link">
-                        <figure>
-                            <img src="tbn_major work/tbn_uhn.png" alt="uhn">
-                            <figcaption class="work-title">SGDc Cancer Care On-line Learning</figcaption>
-                        </figure>
-                        <p class="description">Responsible Web Design<br>Visual Design<br>User Experience Design<br>Inclusive Design</p>
-                    </a>
-                </div>
-                <div class="waterfall-item" data-project="wv-project">
-                    <a href="#" class="project-link">
-                        <figure>
-                            <img src="tbn_major work/tbn_wv.png" alt="wv">
-                            <figcaption class="work-title">WV Project</figcaption>
-                        </figure>
-                        <p class="description">AR & Voice Interface Design<br>Accessible Design</p>
+                        <p class="description">Mobile Application Design<br>Branding<br>Visual Design<br>Product Photography</p>
                     </a>
                 </div>
                 <div class="waterfall-item" data-project="mcd-project">
                     <a href="#" class="project-link">
                         <figure>
                             <img src="tbn_major work/tbn_mcd.png" alt="mcd">
-                            <figcaption class="work-title">MCD Project</figcaption>
+                            <figcaption class="work-title">Weather Iconic for MCD Website of China</figcaption>
                         </figure>
-                        <p class="description">Web Graphic Design</p>
+                        <p class="description">Visual Design<br>Web Graphic Design</p>
                     </a>
                 </div>
                 <div class="waterfall-item" data-project="more-studio">
@@ -108,20 +90,38 @@
                         <p class="description">Responsible Web Design<br>Visual Design</p>
                     </a>
                 </div>
+                <div class="waterfall-item" data-project="uhn-project">
+                    <a href="#" class="project-link">
+                        <figure>
+                            <img src="tbn_major work/tbn_uhn.png" alt="uhn">
+                            <figcaption class="work-title">SGDc Cancer Care<br>On-line Learning</figcaption>
+                        </figure>
+                        <p class="description">Responsible Web Design<br>Visual Design<br>User Experience Design<br>Inclusive Design</p>
+                    </a>
+                </div>
                 <div class="waterfall-item" data-project="kin-care">
                     <a href="#" class="project-link">
                         <figure>
-                            <img src="tbn_major work/tbn_kc.png" alt="kin care">
+                            <img src="tbn_major work/tbn_kc.jpg" alt="kin care">
                             <figcaption class="work-title">Kin Care</figcaption>
                         </figure>
-                        <p class="description">Mobile Application Design<br>Accessible Design<br>Health Monitor Design </p>
+                        <p class="description">Mobile Application Design<br>Health Design<br>Information Architecture</p>
+                    </a>
+                </div>
+                <div class="waterfall-item" data-project="wv-project">
+                    <a href="#" class="project-link">
+                        <figure>
+                            <img src="tbn_major work/tbn_wv.png" alt="wv">
+                            <figcaption class="work-title">Wonder Vision</figcaption>
+                        </figure>
+                        <p class="description">Voice Interaction<br>Accessible Mixed Reality<br>Mobile Augmented Reality</p>
                     </a>
                 </div>
                 <div class="waterfall-item" data-project="table-tennis">
                     <a href="#" class="project-link">
                         <figure>
                             <img src="tbn_major work/tbn_tt.png" alt="table tennis">
-                            <figcaption class="work-title">Table Tennis</figcaption>
+                            <figcaption class="work-title">Table Tennis Competition<br> Registration System</figcaption>
                         </figure>
                         <p class="description">System Information Design<br>Web & Mobile System Interface</p>
                     </a>
@@ -132,7 +132,7 @@
                             <img src="tbn_major work/tbn_l.png" alt="lotes">
                             <figcaption class="work-title">Lotes</figcaption>
                         </figure>
-                        <p class="description">AR Entertainment<br>AR Mobile Application Design</p>
+                        <p class="description">AR Entertainment<br>Mobile AR Application Design</p>
                     </a>
                 </div>
             </main>
