--- a/maker.html
+++ b/maker.html
@@ -42,17 +42,17 @@
                 <ul class="social-icons">
                     <li>
                         <a href="https://github.com/xinzhang-jessy" target="_blank" rel="noopener noreferrer">
-                                <img src="linkedin.png" alt="LinkedIn" class="social-icon">
+                                <img src="icons/linkedin.png" alt="LinkedIn" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://scholar.google.com/citations?user=J-7ZqgkAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
-                                <img src="googlescholar.png" alt="Google Scholar" class="social-icon">
+                                <img src="icons/googlescholar.png" alt="Google Scholar" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://www.instagram.com/jessyzhang_art/" target="_blank" rel="noopener noreferrer">
-                                <img src="github.png" alt="GitHub" class="social-icon">
+                                <img src="icons/github.png" alt="GitHub" class="social-icon">
                             </a>
                         </li>
                     </ul>
@@ -70,7 +70,7 @@
                             <img src="tbn_maker project/tbn_gs.png" alt="green-splash">
                             <figcaption class="work-title">Green Splash</figcaption>
                         </figure>
-                        <p class="description">Landscape Photography<br>Digital Photography</p>
+                        <p class="description">Remote Interaction</p
                     </a>
                 </div>
                 <div class="waterfall-item" data-project="body-gesture">
@@ -79,14 +79,14 @@
                             <img src="tbn_maker project/tbn_bg.png" alt="body-gesture">
                             <figcaption class="work-title">Body Gesture</figcaption>
                         </figure>
-                        <p class="description">Interactive Graphics Design</p>
+                        <p class="description">Interaction Design<br>Wearable Design</p>
                     </a>
                 </div>
                 <div class="waterfall-item" data-project="light-measurement">
                     <a href="#" class="project-link">
                         <figure>
                             <img src="tbn_maker project/tbn_lm.png" alt="light-measurement">
-                            <figcaption class="work-title">Light Measurement</figcaption>
+                            <figcaption class="work-title">Light Measurement Cup</figcaption>
                         </figure>
                         <p class="description">Interactive Installation<br>Led Matrix</p>
                     </a>
