--- a/photo.html
+++ b/photo.html
@@ -42,17 +42,17 @@
                 <ul class="social-icons">
                     <li>
                         <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
-                                <img src="linkedin.png" alt="LinkedIn" class="social-icon">
+                                <img src="icons/linkedin.png" alt="LinkedIn" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://scholar.google.com/citations?user=J-7ZqgkAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
-                                <img src="googlescholar.png" alt="Google Scholar" class="social-icon">
+                                <img src="icons/googlescholar.png" alt="Google Scholar" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://github.com/xinzhang-jessy" target="_blank" rel="noopener noreferrer">
-                                <img src="github.png" alt="GitHub" class="social-icon">
+                                <img src="icons/github.png" alt="GitHub" class="social-icon">
                             </a>
                         </li>
                     </ul>
@@ -70,7 +70,7 @@
                             <img src="tbn_photography/tbn_oihk.jpg" alt="oihk">
                             <figcaption class="work-title">Oasis in Hong Kong</figcaption>
                         </figure>
-                        <p class="description">Landscape Photography<br>Digital Photography</p>
+                        <p class="description">Landscape<br>Digital Photography</p>
                     </a>
                 </div>
                 <div class="waterfall-item photography-item" data-project="cherry-blossom">
